# rendering-technique

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  render_obj_files_to_tga.cpp  sandbox.cpp  tmp_hist_file
assets/: example.tga  obj-files  output.tga  tga-test-suite
cmake_local/: RenderingTechniquesClangOptions.cmake
include/: core_init.h  debug_rendering.h  error.h  log_utils.h  mesh.h  model.h  surface.h  surface_renderer.h  tga_files.h  wavefront_files.h
src/: core_init.cpp  debug_rendering_glfw.cpp  log_utils.cpp  mesh.cpp  model.cpp  surface.cpp  surface_renderer.cpp  tga_files.cpp  wavefront_files.cpp
tests/: t-index.cpp  t-index.h  t-tga.cpp  t-wavefront.cpp  test.cpp
